--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     </style>
     <script src="js/phaser.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script type="text/javascript" src="./js/game.js"></script>
+  </body>
 </html>
