--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Gamedev Phaser Workshop - lesson 01: Initialize the framework</title>
+    <title>Gamedev Phaser Workshop</title>
     <style>
       * {
         padding: 0;
@@ -11,5 +11,7 @@
     </style>
     <script src="js/phaser.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script type="text/javascript" src="./js/game.js"></script>
+  </body>
 </html>
